// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snaphot must match btn 1`] = `
<div>
  <button
    className="btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnBlue 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn btn-blue"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="btn btn-blue hover"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    hover
  </button>
  <button
    className="btn btn-blue focus"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    focus
  </button>
  <button
    className="btn btn-blue selected"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    selected
  </button>
  <button
    className="btn btn-blue disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnDanger 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn btn-danger"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="btn btn-danger hover"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    hover
  </button>
  <button
    className="btn btn-danger focus"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    focus
  </button>
  <button
    className="btn btn-danger selected"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    selected
  </button>
  <button
    className="btn btn-danger disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnLarge 1`] = `
<div
  className="f3 p-4"
>
  <a
    className="btn btn-large btn-purple mr-6"
    disabled={false}
    href="#url"
    onClick={[Function]}
    role="button"
  >
    Large link button
  </a>
  <button
    className="btn btn-large btn-outline-blue"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Large button button
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnLink 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn-link"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button Link
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnOutline 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn btn-outline"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="btn btn-outline hover"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    hover
  </button>
  <button
    className="btn btn-outline focus"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    focus
  </button>
  <button
    className="btn btn-outline selected"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    selected
  </button>
  <button
    className="btn btn-outline disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnPrimary 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="btn btn-primary hover"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    hover
  </button>
  <button
    className="btn btn-primary focus"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    focus
  </button>
  <button
    className="btn btn-primary selected"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    selected
  </button>
  <button
    className="btn btn-primary disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnPurple 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn btn-purple"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="btn btn-purple hover"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    hover
  </button>
  <button
    className="btn btn-purple focus"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    focus
  </button>
  <button
    className="btn btn-purple selected"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    selected
  </button>
  <button
    className="btn btn-purple disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnSecondary 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn btn-secondary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="btn btn-secondary hover"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    hover
  </button>
  <button
    className="btn btn-secondary focus"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    focus
  </button>
  <button
    className="btn btn-secondary selected"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    selected
  </button>
  <button
    className="btn btn-secondary disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnSmall 1`] = `
<div
  className="f3 p-4"
>
  <a
    className="btn btn-sm btn-purple mr-6"
    disabled={false}
    href="#url"
    onClick={[Function]}
    role="button"
  >
    Small link button
  </a>
  <button
    className="btn btn-sm btn-outline-blue"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Small button button
  </button>
</div>
`;

exports[`<Button /> Snaphot must match link 1`] = `
<div>
  <a
    className="btn"
    disabled={false}
    href="#url"
    onClick={[Function]}
    role="button"
  >
    Button
  </a>
</div>
`;
